# tamc

./: Cargo.toml  readme.md
examples/data/: qac_L8_fl_000.txt
src/: csr.rs  gla.rs  ising.rs  ising_results.rs  lib.rs  main.rs  percolation.rs  pt.rs  sa.rs  util.rs
tamc-core/: Cargo.toml
tamc-core/src/: ensembles.rs  lib.rs  metropolis.rs  pt.rs  sa.rs  traits.rs  util.rs
tamc-core/src/parallel/: ensembles.rs  mod.rs  pt.rs
