[package]
name = "tamc"
version = "0.1.0"
authors = ["hmunozb <humberto.munozb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "tamc-core"
]

[dependencies]
fixedbitset = "0.4.0"
ndarray = {version= "0.15.3", features=["serde"] }
nom = "6.0"
num-traits = "0.2.14"
petgraph = "0.6.0"
rand = "0.8.4"
rand_xoshiro = "0.6.0"
rayon = "1.5"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sprs = { git="https://github.com/vbarrielle/sprs.git" }
structopt = "0.3"
tamc-core = {path="./tamc-core", features=["rayon"]}

