[package]
name = "tamc-core"
version = "0.1.0"
authors = ["hmunozb <humberto.munozb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version="0.15.3", features=["serde"] }
num-traits = "0.2.14"
rayon = {version="1.5", optional=true}
rand = "0.8.4"
serde = {version = "1.0", features = ["derive"]}